<resources>
    <string name="app_name">My App Portfolio</string>
    <string name="title">My Nanodegree Apps!</string>
    <string name="popular">Popular Movies</string>
    <string name="stock">Stock Hawk</string>
    <string name="bigger">Build it Bigger</string>
    <string name="material">Make Your App Material</string>
    <string name="Go">Go Ubiquitous</string>
    <string name="cap">Capstone</string>


</resources>
